--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "start": "react-native start"
   },
   "dependencies": {
+    "node-fetch": "^1.7.3",
     "react": "16.0.0-alpha.6",
     "react-native": "0.44.0"
   },
